added volume mount to elastic config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ elasticsearch:
   ports:
     - "9200:9200"
     - "9300:9300"
+  volumes:
+  - /home/bmzhao/elasticsearch:/usr/share/elasticsearch/data
 
 logstash:
   build: logstash/
